opam-version: "1.2"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: ["Zach Shipko"]
license: "MIT"
homepage: "https://github.com/zshipko/ocaml-b2"
bug-reports: "https://github.com/zshipko/ocaml-b2/issues"
dev-repo: "https://github.com/zshipko/ocaml-b2.git"
doc: "https://github.com/zshipko/ocaml-b2"

depends: [
    "jbuilder" {build}
    "cohttp-lwt" {>= "1.0"}
    "ezjsonm" {>= "0.5"}
    "nocrypto" {>= "0.5"}
]

build: [[
    "jbuilder" "build"
]]
